# Sqyre

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  AndroidManifest.xml  Cargo.toml  Dockerfile  Dockerfile.windows-amd64  FyneApp.toml  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  config.yaml  content.go  deny.toml  go.mod  go.sum  itemsTree.go  json.go  lefthook.yml  macroTree.go  main.go  main_test.go  programData.gob  rust-toolchain.toml  settings.json  tree.go
.config/: nextest.toml
.cursor/: hooks.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
actions/: action.go  click.go  goto.go  macro.go  mouseMove.go  ocr.go  repeater.go  search.go  sequence.go
android/: AndroidManifest.xml  README.md
binders/: action.go  binders.go  cache.go  coordinates.go  editor.go  editor_create_dialog.go  item.go  items.go  macro.go  macroUi.go  macros.go  masks.go  modelLists.go  program.go  programs.go
crates/sqyre-app/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/sqyre-app/src/: action_logs_ui.rs  add_action.rs  app_backends.rs  app_docs.rs  app_macro_ops.rs  app_run.rs  assets.rs  catalog.rs  chord_record.rs  collection_capture.rs  data_editor.rs  data_editor_preview.rs  demo_icons.rs  diag.rs  docs_fixture.rs  file_dialogs.rs  hotkey_record.rs  icon_cache.rs  icon_variants.rs  image_view.rs  key_record.rs  lib.rs  macro_meta.rs  macro_overlay.rs  main.rs  overlay_icons.rs  paint_ctx.rs  pickers.rs  pixel_color.rs  preview_tooltip.rs  recorded_action.rs  recording_overlay.rs  settings.rs  single_instance.rs  sound.rs  status_banner.rs  theme.rs  tray.rs  tree_chrome.rs  tree_clipboard.rs  (+12 more)
crates/sqyre-app/src/action_tooltip/: edit.rs  edit_header.rs  help.rs  mod.rs  sections.rs
crates/sqyre-app/src/data_editor/: form_state.rs  forms.rs  helpers.rs  lists.rs  mod.rs  overlay.rs  persist.rs  variants.rs
crates/sqyre-app/src/widgets/: dialogs.rs  fields.rs  mod.rs  tags.rs
crates/sqyre-app/tests/: docs_screenshots.rs  ui_interaction.rs
crates/sqyre-capture/: Cargo.toml
crates/sqyre-capture/src/: diag.rs  error.rs  lib.rs  outline_rect.rs  outline_stub.rs  pixel_convert.rs  shared_run.rs  stub.rs  win_capture.rs  win_focus.rs  win_outline.rs  x11_capture.rs  x11_focus.rs  x11_outline.rs  x11_secondary.rs
crates/sqyre-domain/: Cargo.toml
crates/sqyre-domain/src/: action.rs  bindings.rs  blank.rs  color.rs  display.rs  expr.rs  labels.rs  lib.rs  macro_model.rs  rename.rs  scalar.rs  set_value.rs  taxonomy.rs  variables.rs
crates/sqyre-domain/src/action/: action_serde.rs  mod.rs  wire_keys.rs
crates/sqyre-domain/src/display/: colors.rs  icons.rs  mod.rs
crates/sqyre-executor/: Cargo.toml
crates/sqyre-executor/src/: action_log.rs  backends.rs  highlight.rs  lib.rs  navigate.rs  run.rs  runtime_vars.rs  search.rs  test_support.rs
crates/sqyre-executor/src/actions/: flow.rs  io.rs  mod.rs  submacro.rs  window.rs
crates/sqyre-executor/src/search/: common.rs  facade.rs  image.rs  mod.rs  ocr.rs  pixel.rs  tests.rs
crates/sqyre-hotkeys/: Cargo.toml
crates/sqyre-hotkeys/src/: continue_wait.rs  hooks.rs  lib.rs  macro_hotkeys.rs  screen_click.rs  win_hooks.rs
crates/sqyre-input/: Cargo.toml
crates/sqyre-input/src/: lib.rs
crates/sqyre-match/: Cargo.toml
crates/sqyre-match/src/: blur.rs  corr_simd.rs  image.rs  lib.rs  peaks.rs  template.rs
crates/sqyre-match/tests/: opencv_templmatch.rs
crates/sqyre-persist/: Cargo.toml
crates/sqyre-persist/src/: backup.rs  lib.rs  migrate.rs  programs.rs  settings.rs
crates/sqyre-persist/src/programs/: encode.rs  mod.rs  parse.rs  types.rs  util.rs
crates/sqyre-serialize/: Cargo.toml
crates/sqyre-serialize/src/: action.rs  helpers.rs  lib.rs  macro_codec.rs
crates/sqyre-serialize/src/action/: decode.rs  encode.rs  mod.rs
crates/sqyre-update/: Cargo.toml
crates/sqyre-update/src/: lib.rs  version.rs
crates/sqyre-validate/: Cargo.toml
crates/sqyre-validate/src/: lib.rs
crates/sqyre-vision/: Cargo.toml  build.rs
crates/sqyre-vision/src/: find_pixel.rs  image_util.rs  lib.rs  matcher.rs  ocr_boxes.rs  ocr_engine.rs  ocr_preprocess.rs  search_cache.rs
rust/: .gitignore  Cargo.toml  MIGRATION.md  README.md
rust/crates/sqyre-app/: Cargo.toml
rust/crates/sqyre-app/src/: action_logs_ui.rs  add_action.rs  assets.rs  catalog.rs  data_editor.rs  hotkey_record.rs  icon_cache.rs  icon_variants.rs  image_view.rs  key_record.rs  macro_meta.rs  main.rs  pickers.rs  pixel_color.rs  preview_tooltip.rs  recording_overlay.rs  settings.rs  single_instance.rs  theme.rs  tray.rs  tree_chrome.rs  tree_clipboard.rs  tree_dnd.rs  tree_history.rs  var_pills.rs  variables_panel.rs
rust/crates/sqyre-app/src/action_tooltip/: edit.rs  mod.rs  sections.rs
rust/crates/sqyre-capture/src/: lib.rs  outline_stub.rs  stub.rs  x11_capture.rs  x11_focus.rs  x11_outline.rs
rust/crates/sqyre-domain/: Cargo.toml
rust/crates/sqyre-domain/src/: action.rs  blank.rs  display.rs  expr.rs  labels.rs  lib.rs  macro_model.rs  rename.rs  scalar.rs  set_value.rs  variables.rs
rust/crates/sqyre-executor/: Cargo.toml
rust/crates/sqyre-executor/src/: action_log.rs  backends.rs  error.rs  expr.rs  highlight.rs  lib.rs  misc.rs  navigate.rs  run.rs  runtime_vars.rs  search.rs
rust/crates/sqyre-hotkeys/src/: continue_wait.rs  hooks.rs  lib.rs  macro_hotkeys.rs  screen_click.rs
rust/crates/sqyre-input/src/: lib.rs
rust/crates/sqyre-match/: Cargo.toml
rust/crates/sqyre-match/src/: blur.rs  lib.rs  peaks.rs  template.rs
rust/crates/sqyre-persist/: Cargo.toml
rust/crates/sqyre-persist/examples/: load_home.rs
rust/crates/sqyre-persist/src/: lib.rs  programs.rs  settings.rs
rust/crates/sqyre-serialize/: Cargo.toml
rust/crates/sqyre-serialize/src/: action.rs  lib.rs  macro_codec.rs
rust/crates/sqyre-validate/: Cargo.toml
rust/crates/sqyre-validate/src/: lib.rs
rust/crates/sqyre-varref/src/: lib.rs
rust/crates/sqyre-vision/: Cargo.toml
rust/crates/sqyre-vision/src/: find_pixel.rs  image_util.rs  lib.rs  matcher.rs  ocr_boxes.rs  ocr_engine.rs  ocr_preprocess.rs  search_cache.rs
(+999 files in other folders)
