[package]
name = "sqyre-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Sqyre desktop shell (egui / eframe); WASM GUI editor without native runtime"

[lib]
name = "sqyre_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sqyre"
path = "src/main.rs"

[features]
# OS global hotkeys (rdev). Disabled for wasm builds (`--no-default-features`).
default = ["hooks"]
hooks = ["sqyre-hotkeys/hooks"]

[lints]
workspace = true

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui-phosphor = { workspace = true }
egui_ltreeview = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }
sqyre-match = { path = "../sqyre-match" }
sqyre-domain = { path = "../sqyre-domain" }
sqyre-ui-model = { path = "../sqyre-ui-model" }
sqyre-persist = { path = "../sqyre-persist" }
sqyre-validate = { path = "../sqyre-validate" }
sqyre-varref = { path = "../sqyre-varref" }
sqyre-executor = { path = "../sqyre-executor" }
sqyre-serialize = { path = "../sqyre-serialize" }
sqyre-capture = { path = "../sqyre-capture" }
sqyre-hotkeys = { path = "../sqyre-hotkeys" }
sqyre-vision = { path = "../sqyre-vision" }
serde_yaml = { workspace = true }
rfd = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4"
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3"] }
sqyre-input = { path = "../sqyre-input" }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "linux"))'.dependencies]
ksni = { workspace = true }
winit = "0.30"

[target.'cfg(all(not(target_arch = "wasm32"), any(target_os = "windows", target_os = "macos")))'.dependencies]
tray-icon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }
log = "0.4"
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot", "eframe"] }
image = { workspace = true }
