[package]
name = "sqyre-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ScreenCapturer for absolute virtual-desktop rects (Linux X11 first)"

[dependencies]
sqyre-executor = { path = "../sqyre-executor" }
image = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { workspace = true }

[dev-dependencies]
