[package]
name = "sqyre-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Macro executor with injected automation / capture / match backends"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
sqyre-domain = { path = "../sqyre-domain" }
sqyre-match = { path = "../sqyre-match" }
sqyre-vision = { path = "../sqyre-vision" }
sqyre-hotkeys = { path = "../sqyre-hotkeys" }

[dev-dependencies]
tempfile = { workspace = true }
