[package]
name = "sqyre-hotkeys"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Global hotkeys (Esc stop / failsafe); stubs for CI"

[features]
default = []
# Enable OS-level hooks (needs display / input permissions).
hooks = ["dep:rdev"]

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
rdev = { workspace = true, optional = true }
web-time = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
