[package]
name = "sqyre-input"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OS AutomationBackend (rustautogui lite + arboard)"

[lints]
workspace = true

[dependencies]
sqyre-executor = { path = "../sqyre-executor" }
rustautogui = { workspace = true }
arboard = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
