[package]
name = "sqyre-match"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenCV TM_CCOEFF_NORMED template matching with Sqyre mask/peak/dedup semantics"

[dependencies]
purecv = { workspace = true }
rayon = { workspace = true }
rustfft = "6.4"
thiserror = { workspace = true }

[dev-dependencies]
