[package]
name = "sqyre-match"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenCV TM_CCOEFF_NORMED template matching with Sqyre mask/peak/dedup semantics"

[lints]
workspace = true

[dependencies]
purecv = { workspace = true }
rayon = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
