[package]
name = "sqyre-match"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "OpenCV TM_* template matching (all six methods) with Sqyre mask/peak/dedup semantics"

[lints]
workspace = true

[dependencies]
pulp = { workspace = true }
purecv = { workspace = true }
rayon = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
