[package]
name = "sqyre-serialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "YAML encode/decode for macros and actions"

[lints]
workspace = true

[dependencies]
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sqyre-domain = { path = "../sqyre-domain" }

[dev-dependencies]
proptest = { workspace = true }
