[package]
name = "sqyre-update"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Check GitHub Releases and self-replace Sqyre desktop binaries"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
# Blocking HTTPS with rustls+ring (MinGW-friendly; avoids aws-lc-sys).
ureq = { version = "3", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = { workspace = true }
