[package]
name = "sqyre-validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Validation helpers for names and actions"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
sqyre-domain = { path = "../sqyre-domain" }
sqyre-varref = { path = "../sqyre-varref" }
sqyre-hotkeys = { path = "../sqyre-hotkeys" }
