[package]
name = "sqyre-vision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Image search / find-pixel / OCR helpers over sqyre-match"

[lints]
workspace = true

[dependencies]
image = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
sqyre-match = { path = "../sqyre-match" }
sqyre-domain = { path = "../sqyre-domain" }
leptess = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
