[package]
name = "sqyre-vision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Image search / find-pixel / OCR helpers over sqyre-match"

[lints]
workspace = true

[dependencies]
image = { workspace = true }
parking_lot = { workspace = true }
pulp = { workspace = true }
rayon = { workspace = true }
sqyre-match = { path = "../sqyre-match" }
sqyre-domain = { path = "../sqyre-domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
leptess = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
