[package]
name = "sqyre-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Sqyre desktop shell (egui / eframe)"

[[bin]]
name = "sqyre"
path = "src/main.rs"

[features]
default = ["hooks"]
hooks = ["sqyre-hotkeys/hooks"]

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_ltreeview = { workspace = true }
sqyre-match = { path = "../sqyre-match" }
sqyre-domain = { path = "../sqyre-domain" }
sqyre-persist = { path = "../sqyre-persist" }
sqyre-executor = { path = "../sqyre-executor" }
sqyre-input = { path = "../sqyre-input" }
sqyre-capture = { path = "../sqyre-capture" }
sqyre-hotkeys = { path = "../sqyre-hotkeys" }
sqyre-vision = { path = "../sqyre-vision" }
