[package]
name = "sqyre-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Macro executor with injected automation / capture / match backends"

[dependencies]
thiserror = { workspace = true }
image = { workspace = true }
serde_yaml = { workspace = true }
sqyre-domain = { path = "../sqyre-domain" }
sqyre-match = { path = "../sqyre-match" }
sqyre-varref = { path = "../sqyre-varref" }
sqyre-vision = { path = "../sqyre-vision" }

[dev-dependencies]
