[package]
name = "sqyre-vision"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Image search / find-pixel helpers over sqyre-match"

[dependencies]
image = { workspace = true }
thiserror = { workspace = true }
sqyre-match = { path = "../sqyre-match" }
sqyre-domain = { path = "../sqyre-domain" }

[dev-dependencies]
tempfile = { workspace = true }
